# microfetch

./: Cargo.toml  README.md  flake.nix
benches/: benchmark.rs
nix/: package.nix  shell.nix
src/: colors.rs  desktop.rs  main.rs  release.rs  system.rs  uptime.rs
