[package]
name = "microfetch"
version = "0.4.5"
edition = "2021"

[lib]
name = "microfetch_lib"
path = "src/lib.rs"

[[bin]]
name = "microfetch"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29", features = ["fs", "hostname", "feature"] }
lazy_static = "1.5.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

[profile.dev]
opt-level = 3

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.profiler]
inherits = "release"
debug = true
split-debuginfo = "unpacked"
strip = "none"
